# movie_recommender

./: .gitignore  all_countries.txt  all_genres.txt  all_languages.txt  app_tokens.pkl  backend.py  build_tokens.py  constants.py  main.py  pinecone_client.py  prepare_app_data.py  push_svd_vectors_to_pinecone.py  pyproject.toml  requirements.txt  script.py  streamlit_app.py  title_lookup.json  title_lookup.py  title_lookup_orig.pkl  title_vectorizer.joblib  title_year_map.pkl  update.py  utils.py
