[project]
name = "movie-recommender"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pinecone>=6.0.2",
    "rapidfuzz>=3.13.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "streamlit>=1.45.1",
    "toml>=0.10.2",
]
